// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toHaveBeenCalledBefore fails when given first mock is called before multiple calls to second mock 1`] = `
"<dim>expect(</><red>received</><dim>).not.toHaveBeenCalledBefore(</><green>expected</><dim>)</>

Expected first mock to not have been called before, invocationCallOrder:
  <green>[4000, 6000]</>
Received second mock with invocationCallOrder:
  <red>[5000, 7000, 8000]</>"
`;

exports[`.not.toHaveBeenCalledBefore fails when given first mock is called before second mock 1`] = `
"<dim>expect(</><red>received</><dim>).not.toHaveBeenCalledBefore(</><green>expected</><dim>)</>

Expected first mock to not have been called before, invocationCallOrder:
  <green>[4000]</>
Received second mock with invocationCallOrder:
  <red>[5000]</>"
`;

exports[`.not.toHaveBeenCalledBefore fails when given first mock that has been called and a second mock that has not been called 1`] = `
"<dim>expect(</><red>received</><dim>).not.toHaveBeenCalledBefore(</><green>expected</><dim>)</>

Expected first mock to not have been called before, invocationCallOrder:
  <green>[4000]</>
Received second mock with invocationCallOrder:
  <red>[]</>"
`;

exports[`.toHaveBeenCalledBefore fails when given a first mock has not been called 1`] = `
"<dim>expect(</><red>received</><dim>).toHaveBeenCalledBefore(</><green>expected</><dim>)</>

Expected first mock to have been called before, invocationCallOrder:
  <green>[]</>
Received second mock with invocationCallOrder:
  <red>[]</>"
`;

exports[`.toHaveBeenCalledBefore fails when given first mock is called after second mock 1`] = `
"<dim>expect(</><red>received</><dim>).toHaveBeenCalledBefore(</><green>expected</><dim>)</>

Expected first mock to have been called before, invocationCallOrder:
  <green>[5000]</>
Received second mock with invocationCallOrder:
  <red>[4000]</>"
`;

exports[`.toHaveBeenCalledBefore fails when given first mock is called after several calls to second mock 1`] = `
"<dim>expect(</><red>received</><dim>).toHaveBeenCalledBefore(</><green>expected</><dim>)</>

Expected first mock to have been called before, invocationCallOrder:
  <green>[5000, 6000, 7000]</>
Received second mock with invocationCallOrder:
  <red>[4000]</>"
`;

exports[`.toHaveBeenCalledBefore fails when given first value is not a jest spy or mock 1`] = `
"<dim>expect(</><red>received</><dim>).toHaveBeenCalledAfter(</><green>expected</><dim>)</>

Matcher error: <red>\\"received\\"</> must be a mock or spy function

Received:
  function: <red>[Function mock1]</>"
`;

exports[`.toHaveBeenCalledBefore fails when given second value is not a jest spy or mock 1`] = `
"<dim>expect(</><red>received</><dim>).toHaveBeenCalledAfter(</><green>expected</><dim>)</>

Matcher error: <green>\\"expected\\"</> must be a mock or spy function

Expected:
  function: <green>[Function mock2]</>"
`;
